# dongguk-individual-research

./: .gitignore  README.md  pyproject.toml
backend/: build.gradle  settings.gradle
backend/src/main/java/kr/ac/dongguk/individualresearch/: IndividualResearchApplication.java
backend/src/main/java/kr/ac/dongguk/individualresearch/application/: ApplicationAutofillResponse.java  ApplicationConflictException.java  ApplicationController.java  ApplicationCreateResponse.java  ApplicationDetailResponse.java  ApplicationDocumentResponse.java  ApplicationDocumentService.java  ApplicationFlowException.java  (+14 more)
backend/src/main/resources/: application.yml
backend/src/main/resources/templates/application/: application-preview.html
backend/src/main/resources/templates/interview/: interview-template.html
backend/src/test/resources/: application.yml
design-preview/: README.md  wireframe-system.html
design-preview/scripts/: wireframes.js
design-preview/styles/: wireframes.css
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: main.jsx  main.tsx  styles.css  theme.css
outputs/api-spec/: individual_research_api_spec.xlsx
reports/: README.md
samples/: 1. 2026-여름학기 개별연구 개설신청서(컴퓨터·AI학과)_20260430 (1).xlsx  2. 2026-여름학기 개별연구 수강신청원(학생용) (1).hwp  2. 2026-여름학기 개별연구 수강신청원(학생용).hwpx
src/dongguk_notice/: __init__.py  api.py  auth.py  cli.py  config.py  crawler.py  database.py  downloads.py  errors.py  excel.py  hwp.py  snapshot.py  structure.py  website.py
tests/: test_auth_api.py  test_crawler.py  test_samples.py  test_website_parser.py
(+78 files in other folders)
